2005-12-13  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* libgnome/gnome-program.c (gnome_program_init_paramv): Allow
	nparams == 0, gnome-python depends on it.

2005-12-12  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Bump version to 2.13.3.

2005-12-12  Kjartan Maraas  <kmaraas@gnome.org>

	* .cvsignore: Shh
	* doc/reference/.cvsignore: Shh
	* doc/reference/tmpl/gnome-url.sgml: This changed somehow
	* libgnome/gnome-program.c: (gnome_program_init_paramv):
	Check for nparams > 0 not >= 0.
	* monikers/bonobo-moniker-extra.c: Remove extra semicolon.
	* po/.cvsignore: Shh

2005-12-11  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-url (gnome_url_show_with_env): Give some
	feedback if the host can't be found. Patch from Christian Neumair.
	Closes bug #323659.

2005-11-14  Sebastien Bacher  <seb128@debian.org>

	* NEWS:
	* configure.in:
	update for 2.13.2.

2005-11-14  Sebastien Bacher  <seb128@debian.org>

	* schemas/desktop_gnome_interface.schemas.in:
	describe the new XSettings to control the visibility of the 
	input method and Unicode control character submenus in the context 
	menus of entries and text views, change by Matthias Clasen 
	(Closes: #319637). 

2005-11-14  Sebastien Bacher  <seb128@debian.org>

	* schemas/desktop_gnome_peripherals_mouse.schemas.in:
	Updated the descriptions for the cursor changes with the new GTK
	(Closes: #311524).

2005-11-13  Jürg Billeter  <j@bitron.ch>

	* schemas/desktop_gnome_peripherals_keyboard.schemas.in:
	Add schema for numlock state, moved from gnome-control-center.
	Fixes bug #319788.

2005-11-10  Simos Xenitellis  <simos@gnome.org>

	* configure.in: Added tt (Tatar) to ALL_LINGUAS.

2005-10-28  Erdal Ronahi  <erdal.ronahi@gmail.com>

	* configure.in: Added ku (Kurdish) to ALL_LINGUAS

2005-10-28  Christian Neumair  <chris@gnome-de.org>

	* libgnome/gnome-url.c: (gnome_url_show_with_env):
	* libgnome/gnome-url.h:
	Add GNOME_URL_ERROR_CANCELLED and return it in gnome_url_show_with_env